mesh-app/mesh-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: mesh-app
    app.kubernetes.io/component: mesh-app
    app.kubernetes.io/instance: mesh-app
  name: mesh-app
spec:
  ports:
  - name: 8080-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mesh-app
  type: ClusterIP
