mesh-app/mesh-app-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-gw
  annotations:
    argocd.argoproj.io/compare-options: xxxx
    argocd.argoproj.io/sync-options: xxxx
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "mesh-app.example.org"
